nerdworx-io-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nerdworx-io-httproute
  namespace: nerdworx-io
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: nerdworx-io-gateway
      sectionName: https
  hostnames:
    - "nerdworx.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: nerdworx-io
          port: 80
          weight: 1
